--- a/app/src/main/res/layout/fragment_image_search.xml
+++ b/app/src/main/res/layout/fragment_image_search.xml
@@ -13,6 +13,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/search"
+        android:maxLines="1"
+        android:inputType="text"
         app:layout_constraintEnd_toStartOf="@+id/btnSearch"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
