--- a/app/src/main/res/layout/thumbnail_item.xml
+++ b/app/src/main/res/layout/thumbnail_item.xml
@@ -16,6 +16,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/ivHeart"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:src="@drawable/ic_heart_filled"
+        android:layout_margin="20dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@+id/ivThumbnail"
+        app:layout_constraintTop_toTopOf="@+id/ivThumbnail" />
+
     <TextView
         android:id="@+id/tvSource"
         android:layout_width="wrap_content"
