좋아요 연동기능 완성 프래그먼트 생명주기 관련 수정
todo - 앱 끌때 마지막 검색어 저장

--- a/app/src/main/res/layout/fragment_my_box.xml
+++ b/app/src/main/res/layout/fragment_my_box.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="15dp"
+    android:background="@color/white"
+    android:clickable="true"
     tools:context=".presentation.main.MyBoxFragment">
 
     <androidx.recyclerview.widget.RecyclerView
