--- a/app/src/main/res/layout/fragment_image_search.xml
+++ b/app/src/main/res/layout/fragment_image_search.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
+    android:background="@color/white"
+    android:clickable="true"
     tools:context=".presentation.main.ImageSearchFragment">
 
     <EditText
