--- a/app/src/main/res/layout/thumbnail_item.xml
+++ b/app/src/main/res/layout/thumbnail_item.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="wrap_content"
     android:padding="10dp">
 
     <ImageView
         android:id="@+id/ivThumbnail"
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:scaleType="fitCenter"
         android:src="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,6 +32,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/search_item_text"
         android:maxLines="1"
+        android:ellipsize="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivThumbnail" />
